fixed letter spacing

--- a/workshop01/src/app/components/header/header.component.scss
+++ b/workshop01/src/app/components/header/header.component.scss
@@ -18,7 +18,7 @@ header {
     margin-left: 20px;
     font-size: 28px;
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
     font-weight: 500;
 
     a {
